--- a/static/style.css
+++ b/static/style.css
@@ -68,46 +68,52 @@
 }
 
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-black.woff) format('woff');
-    font-style: normal;
-    font-weight: black;
+	font-family: 'Ostrich Sans';
+	src: url('ostrich-sans-black.woff') format('woff');
+	font-weight: 900;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-inline-regular.woff) format('woff');
-    font-style: normal;
-    font-weight: inline;
+	font-family: 'Ostrich Sans';
+	src: url('ostrich-sans-bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-inline-italic.woff) format('woff');
-    font-style: italic;
-    font-weight: inline;
+	font-family: 'Ostrich Sans';
+	src: url('ostrich-sans-regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-bold.woff) format('woff');
-    font-style: normal;
-    font-weight: bold;
+	font-family: 'Ostrich Sans';
+	src: url('ostrich-sans-light.woff') format('woff');
+	font-weight: 300;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-dashed.woff) format('woff');
-    font-style: normal;
-    font-weight: dashed;
+	font-family: 'Ostrich Sans Dashed';
+	src: url('ostrich-sans-dashed.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-regular.woff) format('woff');
-    font-style: normal;
-    font-weight: normal;
+	font-family: 'Ostrich Sans Rounded';
+	src: url('ostrich-sans-rounded.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
 }
 @font-face {
-    font-family: 'Ostrich Sans';
-    src: url(/static/fonts/ostrich-sans/ostrich-sans-light.woff) format('woff');
-    font-style: normal;
-    font-weight: light;
+	font-family: 'Ostrich Sans Inline';
+	src: url('ostrich-sans-inline-regular.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: 'Ostrich Sans Inline';
+	src: url('ostrich-sans-inline-italic.woff') format('woff');
+	font-weight: normal;
+	font-style: italic;
 }
 
 @font-face {
@@ -123,7 +129,7 @@
 
 /* Base formatting */
 body {
-  font: normal 18px 'Junction', serif;
+  font: normal 18px Blackout, serif;
   line-height: 24px;
   width: 100%;
   height: 100%;
