--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'Blackout';
-  font-weight: 600;
+  font-weight: 800;
   src: url(/static/fonts/blackout/blackout_two_am-webfont.woff) format('woff');
 }
 @font-face {
   font-family: 'Blackout';
-  font-weight: 500;
+  font-weight: 600;
   src: url(/static/fonts/blackout/blackout_midnight-webfont.woff) format('woff');
 }
 @font-face {
@@ -17,43 +17,43 @@
 @font-face {
   font-family: 'Fanwood';
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   src: url(/static/fonts/fanwood/fanwood-webfont.woff) format('woff');
 }
 @font-face {
   font-family: 'Fanwood';
   font-style: italic;
-  font-weight: normal;
+  font-weight: 400;
   src: url(/static/fonts/fanwood/fanwood-italic-webfont.woff) format('woff');
 }
 @font-face {
-  font-family: 'Fanwood Text';
+  font-family: 'Fanwood';
   font-style: normal;
-  font-weight: text;
-  src: url(/static/fonts/fanwood/_textfanwood-webfont.woff) format('woff');
+  font-weight: 500;
+  src: url(/static/fonts/fanwood/fanwood_text-webfont.woff) format('woff');
 }
 @font-face {
-  font-family: 'Fanwood Text';
+  font-family: 'Fanwood';
   font-style: italic;
-  font-weight: text;
+  font-weight: 500;
   src: url(/static/fonts/fanwood/fanwood_text-italic-webfont.woff) format('woff');
 }
 
 @font-face {
     font-family: 'Junction';
     src: url(/static/fonts/junction/junction-bold.woff) format('woff');
-    font-weight: bold;
+    font-weight: 600;
     font-style: normal;
 }
 @font-face {
     font-family: 'Junction';
     src: url(/static/fonts/junction/junction-regular.woff) format('woff');
-    font-weight: normal;
+    font-weight: 400;
 }
 @font-face {
     font-family: 'Junction';
     src: url(/static/fonts/junction/junction-light.woff) format('woff');
-    font-weight: light;
+    font-weight: 300;
 }
 
 @font-face {
@@ -129,7 +129,7 @@
 
 /* Base formatting */
 body {
-  font: 400 18px Blackout, serif;
+  font: 400 18px Junction, serif;
   line-height: 24px;
   width: 100%;
   height: 100%;
