--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block base %}
-<article>
+<article class="schedule">
 <h1>Tom's schedule</h1>
 {% if schedule %}
 {{schedule|safe}}
