--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block bodytag %}
 <body id="index-main" style="background-image: url(static/background-images/2014-12-11.jpg);">
 {% endblock %}
-{% block homelink %}{% endblock %}
+{% block navlinks %}{% endblock %}
 
 {% block base %}
 <div class="search">
