--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,40 @@
   <head>
     <title>Dada Portal | {{title|default:'Thomas Levine'}}</title>
     <link rel="stylesheet" href="/static/style.css" type="text/css" />
+
+    {% comment %}
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta content="Dada Portal" name="generator">
+    <meta content="width=device-width" name="viewport">
+    <title>Thomas Levine, Dada Artist</title>
+    <meta content="" name="description">
+    <meta content="Thomas Levine" name="author">
+    <link href="http://domain/humans.txt" rel="author" type="text/plain">
+    <meta content="summary" name="twitter:card">
+    <meta content="@thomaslevine" name="twitter:site">
+    <meta content="Thomas Levine" name="twitter:title">
+    <meta content="" name="twitter:description">
+    <meta content="@thomaslevine" name="twitter:creator">
+    <meta content="http://thomaslevine.com/apple-touch-icon-144x144-precomposed.png" name="twitter:image:src">
+    <meta content="thomaslevine.com" name="twitter:domain">
+    <meta content="" name="twitter:app:name:iphone">
+    <meta content="" name="twitter:app:name:ipad">
+    <meta content="" name="twitter:app:name:googleplay">
+    <meta content="" name="twitter:app:url:iphone">
+    <meta content="" name="twitter:app:url:ipad">
+    <meta content="" name="twitter:app:url:googleplay">
+    <meta content="" name="twitter:app:id:iphone">
+    <meta content="" name="twitter:app:id:ipad">
+    <meta content="" name="twitter:app:id:googleplay">
+    <meta content="http://thomaslevine.com/" property="og:url">
+    <meta content="thomaslevine.com" property="og:site_name">
+    <meta content="" property="og:description">
+    <meta content="" property="og:title">
+    <meta content="http://thomaslevine.com/apple-touch-icon-144x144-precomposed.png" property="og:image">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
+    {% endcomment %}
+
   </head>
   {% block bodytag %}<body>{% endblock %}
     <nav>
