--- a/templates/popular.html
+++ b/templates/popular.html
@@ -7,9 +7,14 @@
     <li><a href="https://github.com/scraperwiki/urchin">urchin</a>
     <li><a href="http://openprism.thomaslevine.com">openprism</a>
   </ul>
-  <h2>Letterpress</h2>
+  <h2>Data science</h2>
   <ul>
-    <li><a href="/!/print-formaldehyde/">artisan spreadsheets</a>
+    <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
+    <li><a href="/!/parsing-pdfs">How I parse PDF files.</a></li>
+    <li><a href="/!/r-spells-for-data-wizards">R Spells for Data wizards</a></li>
+    <li><a href="/!/socrata-summary">Socrata summary</a></li>
+    <li><a href="/!/socrata-products">Socrata products</a></li>
+    <li><a href="/!/open-data-licensing">Open data licensing</a></li>
   </ul>
   <h2>Music videos</h2>
   <ul>
@@ -19,8 +24,13 @@
   </ul>
   <h2>Toilets</h2>
   <ul>
-    <li><a href="/!/risley-toilets">sanitation</a></li>
+    <li><a href="/!/risley-toilets/">Unsanitary conditions in the Risley Hall bathrooms</a></li>
     <li><a href="/!/hovering-cycle">posture</a></li>
+  </ul>
+  <h2>Other</h2>
+  <ul>
+    <li><a href="/!/print-formaldehyde/">artisan spreadsheets</a>
+    <li><a href="/!/beaglebone-power">Beaglebone power supplies</a></li>
   </ul>
 </article>
 {% endblock %}
