--- a/templates/mail-subthread.html
+++ b/templates/mail-subthread.html
@@ -4,7 +4,7 @@
   {% endif %}
     {{ message.from }}
   {% if not message.is_match %}</a>{% endif %}
-  ({{message.date}})
+  <span class="date">({{message.date}})</span>
   </a>
 </li>
 <ul>
