--- a/templates/base.html
+++ b/templates/base.html
@@ -3,22 +3,25 @@
     <title>Dada Portal | {{title|default:'Thomas Levine'}}</title>
     <link rel="stylesheet" href="/static/style.css" type="text/css" />
 
-    {% comment %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta content="Dada Portal" name="generator">
     <meta content="width=device-width" name="viewport">
     <title>Thomas Levine, Dada Artist</title>
-    <meta content="" name="description">
+    <meta content="{{description|default: 'Big Dada'}}" name="description">
     <meta content="Thomas Levine" name="author">
-    <link href="http://domain/humans.txt" rel="author" type="text/plain">
+
     <meta content="summary" name="twitter:card">
     <meta content="@thomaslevine" name="twitter:site">
     <meta content="Thomas Levine" name="twitter:title">
-    <meta content="" name="twitter:description">
+    <meta content="{{twitter_description|default: description|default: 'Big Dada'}}"
+          name="twitter:description">
     <meta content="@thomaslevine" name="twitter:creator">
-    <meta content="http://thomaslevine.com/apple-touch-icon-144x144-precomposed.png" name="twitter:image:src">
+    <meta content="http://thomaslevine.com/static/hat.png"
+          name="twitter:image:src">
     <meta content="thomaslevine.com" name="twitter:domain">
+
+    {% comment %}
     <meta content="" name="twitter:app:name:iphone">
     <meta content="" name="twitter:app:name:ipad">
     <meta content="" name="twitter:app:name:googleplay">
@@ -28,13 +31,18 @@
     <meta content="" name="twitter:app:id:iphone">
     <meta content="" name="twitter:app:id:ipad">
     <meta content="" name="twitter:app:id:googleplay">
+    {% endcomment %}
+
     <meta content="http://thomaslevine.com/" property="og:url">
     <meta content="thomaslevine.com" property="og:site_name">
-    <meta content="" property="og:description">
-    <meta content="" property="og:title">
-    <meta content="http://thomaslevine.com/apple-touch-icon-144x144-precomposed.png" property="og:image">
-    <link href="favicon.ico" rel="icon" type="image/x-icon">
-    {% endcomment %}
+    <meta content="{{facebook_description|default: description|default: 'Big Dada'}}"
+          property="og:description">
+    <meta content="Dada Portal | {{facebook_title|default: title|default: 'Thomas Levine'}}"
+          property="og:title">
+    <meta content="http://thomaslevine.com/static/hat.png"
+          property="og:image">
+
+    <link href="/static/favicon.ico" rel="icon" type="image/x-icon">
 
   </head>
   {% block bodytag %}<body>{% endblock %}
