--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,13 @@
     <meta content="Dada Portal" name="generator">
     <meta content="width=device-width" name="viewport">
     <title>Thomas Levine, Dada Artist</title>
-    <meta content="{{description|default: 'Big Dada'}}" name="description">
+    <meta content="{{description|default:'Big Dada'}}" name="description">
     <meta content="Thomas Levine" name="author">
 
     <meta content="summary" name="twitter:card">
     <meta content="@thomaslevine" name="twitter:site">
     <meta content="Thomas Levine" name="twitter:title">
-    <meta content="{{twitter_description|default: description|default: 'Big Dada'}}"
+    <meta content="{{twitter_description|default:'Big Dada'}}"
           name="twitter:description">
     <meta content="@thomaslevine" name="twitter:creator">
     <meta content="http://thomaslevine.com/static/hat.png"
@@ -35,9 +35,9 @@
 
     <meta content="http://thomaslevine.com/" property="og:url">
     <meta content="thomaslevine.com" property="og:site_name">
-    <meta content="{{facebook_description|default: description|default: 'Big Dada'}}"
+    <meta content="{{facebook_description|default:'Big Dada'}}"
           property="og:description">
-    <meta content="Dada Portal | {{facebook_title|default: title|default: 'Thomas Levine'}}"
+    <meta content="Dada Portal | {{facebook_title|default:'Thomas Levine'}}"
           property="og:title">
     <meta content="http://thomaslevine.com/static/hat.png"
           property="og:image">
