--- a/static/style.css
+++ b/static/style.css
@@ -283,8 +283,13 @@ body {
 nav {
   border-bottom: solid 1px #666;
 }
-.search-form input {
+.search-form input[type=text] {
   border: solid 1px #666;
+  color: #111;
+  background-color: #888;
+}
+.search-form input[type=text]:focus {
+  background-color: white;
 }
 pre, blockquote, .line-block /* rst class */ {
   color: #BBB;
