--- a/templates/404.html
+++ b/templates/404.html
@@ -1,4 +1,5 @@
 {% extends 'search.html' %}
 {% block introduction %}
-That page has moved; try searching.
+That page has moved; try searching the website or
+<a href="mailto:_@thomaslevine.com">emailing me</a>.
 {% endblock %}
