--- a/templates/article-index.html
+++ b/templates/article-index.html
@@ -10,7 +10,7 @@
     {% endfor %}
   </ul>
   {% else %}
-  <em>No articles match the tags.</em>
+  <center>No articles match the tags.</center>
   {% endif %}
 </article>
 {% endblock %}
