--- a/static/style.css
+++ b/static/style.css
@@ -227,11 +227,9 @@ footer {
 
 /* Article styles */
 article {
+  text-align: justify;
   margin-left: auto;
   margin-right: auto;
-}
-article img {
-  width: 100%;
 }
 article ul, article ol, article dl {
   margin-left: 1.5em;
@@ -239,6 +237,20 @@ article ul, article ol, article dl {
 article dt { float: left; width: 90px; }
 article dt:after { content: ': '; }
 article dd { margin-left: 90px; }
+article img, article video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+  max-height: 340px;
+  background-color: white;
+}
+article img.wide,
+article video.wide {
+  max-height: none;
+  max-width: none;
+  width: 100%;
+}
 
 /* Mail styles */
 section.thread > ul ul {
