--- a/static/style.css
+++ b/static/style.css
@@ -177,6 +177,8 @@ table {
   border-right: none;
   border-top: solid 2px;
   border-bottom: solid 2px;
+  margin-left: auto;
+  margin-right: auto;
 }
 td { border: none; }
 table tr:first-child th, table tr:first-child td { border-bottom: solid 1px; }
@@ -358,6 +360,9 @@ article ul, article ol, article dl {
   .search-form input[type=text] {
     width: 403px; /* should be 404, but I left room for the fudge factor */
   }
+}
+@media screen and (min-width: 900px) {
+  article { width: 880px; }
 }
 
 
