--- a/templates/mail-thread.html
+++ b/templates/mail-thread.html
@@ -41,7 +41,7 @@
       {% endfor %}
     </ul>
     {% if threads|length == 0 %}
-    <em>No emails match "{{q}}".</em>
+    <em>No emails match &ldquo;{{q}}&rdquo;.</em>
     {% elif threads|length == 100 %}
     <em>Only the first 100 threads are displayed; refine your search to see more results.</em>
     {% endif %}
