--- a/templates/search.html
+++ b/templates/search.html
@@ -11,7 +11,7 @@
 </p>
 {% else %}
 <p>
-  Here are the matches for "<strong>{{q}}</strong>" among
+  Here are the matches for &ldquo;<strong>{{q}}</strong>&rdquo; among
   {% if hide_emails %}
   articles, only. You can <a href="/+/?q={{q}}">include mails too</a>.
   {% else %}
