--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   {% include 'search-form.html' %}
   <ul>
     <li><a href="/popular/">Popular articles</a></li> &bull;
-    <li><a href="/+/?q=date:1W..&amp;hide_emails=">Recent updates</a></li>
+    <li><a href="/+/?q=date:1D..&amp;hide_emails=">Recent updates</a></li>
   </ul>
 </div>
 {% endblock %}
