--- a/templates/search.html
+++ b/templates/search.html
@@ -4,6 +4,7 @@
 {% if results == None %}
 {% block introduction %}
 <img src="/static/search-arrow.png"
+     class="transparent"
      alt="Search bar is at the top-right of the screen." />
 {% endblock %}
 <p style="text-align: center;">
