--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block base %}
 <article>
-  <p>{{message.0|safe}} <a href="{{email_address}}">{{message.1}}</a>{{message.2}}</p>
+  <p>{{message.0|safe}}<a href="{{email_address}}">{{message.1}}</a>{{message.2}}</p>
+  <p><a href="/!/curriculum-vitae/">Curriculum vitae</a></p>
 </article>
 {% endblock %}
