--- a/static/style.css
+++ b/static/style.css
@@ -380,8 +380,12 @@ article ul, article ol, article dl {
   article { width: 880px; }
 }
 
-
 @media print {
   nav, footer { display: none; }
   a, p, h1, h2, h3, h4, h5 { color: black !important; }
+  strong { font-weight: bold; }
+  .webonly { display: none; }
+  a[href]:after {
+    content: " (" attr(href) ")";
+  }
 }
