--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,9 @@
     <meta content="" name="twitter:app:id:googleplay">
     {% endcomment %}
 
-    <meta content="http://thomaslevine.com/" property="og:url">
     <meta content="thomaslevine.com" property="og:site_name">
+    <meta content="{{og_url}}"
+          property="og:url">
     <meta content="{{facebook_description|default:'Big Dada'}}"
           property="og:description">
     <meta content="{{facebook_title|default:'Dada Portal | Thomas Levine'}}"
