--- a/templates/popular.html
+++ b/templates/popular.html
@@ -4,33 +4,39 @@
   <h1>Popular articles/works</h1>
   <h2>Software</h2>
   <ul>
+    <li><a href="/!/sheetmusic/">sheetmusic</a>
     <li><a href="https://github.com/scraperwiki/urchin">urchin</a>
     <li><a href="http://openprism.thomaslevine.com">openprism</a>
   </ul>
   <h2>Data science</h2>
   <ul>
     <li><a href="/!/web-sites-to-data-tables-in-depth/">Web sites to data tables, in depth</a></li>
-    <li><a href="/!/parsing-pdfs">How I parse PDF files.</a></li>
-    <li><a href="/!/r-spells-for-data-wizards">R Spells for Data wizards</a></li>
-    <li><a href="/!/socrata-summary">Socrata summary</a></li>
-    <li><a href="/!/socrata-products">Socrata products</a></li>
-    <li><a href="/!/open-data-licensing">Open data licensing</a></li>
+    <li><a href="/!/parsing-pdfs/">How I parse PDF files.</a></li>
+    <li><a href="/!/r-spells-for-data-wizards/">R Spells for Data wizards</a></li>
+  </ul>
+  <h2>Open openness</h2>
+  <ul>
+    <li><a href="/!/open-data-licensing/">Open data licensing</a></li>
+    <li><a href="/!/nyc-crime-map/">New York City crime map</a></li>
+    <li><a href="/!/socrata-summary/">Socrata summary</a></li>
+    <li><a href="/!/socrata-products/">Socrata products</a></li>
+    <li><a href="/!/socrata-metrics-api/">Socrata metrics API</a></li>
   </ul>
   <h2>Music videos</h2>
   <ul>
-    <li><a href="/!/christmas-gifts">christmas gifts</a></li>
+    <li><a href="/!/christmas-gifts/">Christmas gifts</a></li>
     <li><a href="http://fms.csvsoundsystem.com">USA spending</a></li>
-    <li><a href="/!/twinkle/">twinkle</a></li>
+    <li><a href="/!/twinkle/">Twinkle</a></li>
   </ul>
   <h2>Toilets</h2>
   <ul>
     <li><a href="/!/risley-toilets/">Unsanitary conditions in the Risley Hall bathrooms</a></li>
-    <li><a href="/!/hovering-cycle">posture</a></li>
+    <li><a href="/!/hovering-cycle/">Posture</a></li>
   </ul>
   <h2>Other</h2>
   <ul>
-    <li><a href="/!/print-formaldehyde/">artisan spreadsheets</a>
-    <li><a href="/!/beaglebone-power">Beaglebone power supplies</a></li>
+    <li><a href="/!/print-formaldehyde/">Artisan spreadsheets</a>
+    <li><a href="/!/beaglebone-power/">Beaglebone power supplies</a></li>
   </ul>
 </article>
 {% endblock %}
