--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
     </nav>
     {% block base %}{% endblock %}
     {% if hit_id %}
-    <script>{% include 'track.js' %}</script>
+    <script>{% include 'tracking-track.js' %}</script>
     <noscript><img style="border: 0;" src="/track/followup.ico" /></noscript>
     {% endif %}
   </body>
