--- a/templates/tracking-plot.html
+++ b/templates/tracking-plot.html
@@ -2,7 +2,7 @@
 {% block base %}
 <article>
   <h1>{{plot_title}}</h1>
-  <div id="plot"></div>
+  <div id="plot">Plot goes here.</div>
   <pre>{{sql}}</pre>
 </article>
 
