--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
     <nav>
       {% block navlinks %}
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="{% url 'dadaportal-index' %}">Home</a></li>
         {% comment %}
         <li><a href="/schedule/">Schedule</a></li>
         <li><a href="/!/about/">About</a></li>
