--- a/templates/mail-subthread.html
+++ b/templates/mail-subthread.html
@@ -1,5 +1,5 @@
 <li>
-  <a href="/@/id:{{message.message_id}}/" title="{{message.subject}}">{{ message.from }}</a>
+  <a href="{% url 'id' + message['message_id'] %}" title="{{message.subject}}">{{ message.from }}</a>
   <span class="date">({{message.date}})</span>
   </a>
 </li>
