--- a/templates/article-index.html
+++ b/templates/article-index.html
@@ -5,7 +5,7 @@
   <ul>
     {% for article in articles %}
     <li>
-      <a href="{% url 'article-index' article['endpoint']}">{{article.title}}</a>
+      <a href="{% url 'articles-article' article.endpoint %}">{{article.title}}</a>
     </li>
     {% endfor %}
   </ul>
