--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,12 @@
 
     <meta content="summary" name="twitter:card">
     <meta content="@thomaslevine" name="twitter:site">
-    <meta content="{{twitter_title|default:'Dada Portal | Thomas Levine'}}" name="twitter:title">
-    <meta content="{{twitter_description|default:'Big Dada'}}"
-          name="twitter:description">
+    {% if twitter_title %}
+    <meta content="{{twitter_title}}" name="twitter:title">
+    {% endif %}
+    {% if twitter_description %}
+    <meta content="{{twitter_description}}" name="twitter:description">
+    {% endif %}
     <meta content="@thomaslevine" name="twitter:creator">
     <meta content="http://{{domain_name}}{{twitter_image|default:'/static/hat.png'}}"
           name="twitter:image:src">
@@ -35,12 +38,13 @@
     {% endcomment %}
 
     <meta content="{{domain_name}}" property="og:site_name">
-    <meta content="{{og_url}}"
-          property="og:url">
-    <meta content="{{facebook_description|default:'Big Dada'}}"
-          property="og:description">
-    <meta content="{{facebook_title|default:'Dada Portal | Thomas Levine'}}"
-          property="og:title">
+    <meta content="{{og_url}}" property="og:url">
+    {% if facebook_title %}
+    <meta content="{{facebook_title}}" name="og:title">
+    {% endif %}
+    {% if facebook_description %}
+    <meta content="{{facebook_description}}" name="og:description">
+    {% endif %}
     <meta content="http://{{domain_name}}{{facebook_image|default:'/static/hat.png'}}"
           property="og:image">
 
