--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
 {% block base %}
 <div class="search">
   <h1>Dada Portal</h1>
-  {% include 'search-form.html' %}
+  {% include 'dadaportal/search-form.html' %}
   <ul>
-    <li><a href="{% url 'dadaportal-popular' %}">Popular articles</a></li> &bull;
+    <li><a href="{% url 'dadaportal/popular' %}">Popular articles</a></li> &bull;
     <li><a href="{% url 'search' %}?q=date:1D..&amp;hide_emails=">Recent updates</a></li>
   </ul>
 </div>
