--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <h1>Dada Portal</h1>
   {% include 'dadaportal/search-form.html' %}
   <ul>
-    <li><a href="{% url 'dadaportal/popular' %}">Popular articles</a></li> &bull;
+    <li><a href="{% url 'dadaportal/recommended' %}">Popular articles</a></li> &bull;
     <li><a href="{% url 'search' %}?q=date:1D..&amp;hide_emails=">Recent updates</a></li>
   </ul>
 </div>
