--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,7 @@
       </ul>
       {% endblock %}
       {% block top_search %}
-      {% include 'search-form.html' %}
+      {% include 'dadaportal/search-form.html' %}
       {% endblock %}
     </nav>
     {% block base %}{% endblock %}
