--- a/templates/articles/index.html
+++ b/templates/articles/index.html
@@ -10,7 +10,7 @@
     {% endfor %}
   </ul>
   {% else %}
-  <center>No articles match the tags.</center>
+  <center>No articles</center>
   {% endif %}
 </article>
 {% endblock %}
