--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -2,21 +2,19 @@
 
 {% block base %}
 <article>
-  <h2>Search</h2>
+  <h1>Search the Dada Portal</h1>
 
-  <form method="get" action=".">
-    <table>
-      {{ form.as_table }}
-      <tr>
-          <td>&nbsp;</td>
-          <td>
-              <input type="submit" value="Search">
-          </td>
-      </tr>
-    </table>
+  <section>
+    <h2>Query</h2>
+    <form method="get" action=".">
+      {{ form.as_p }}
+      <p><input type="submit" value="Search"></p>
+    </form>
+  </section>
 
-    {% if query %}
-    <h3>Results</h3>
+  {% if query %}
+  <section>
+    <h2>Results</h2>
 
     {% for result in page.object_list %}
     <p><a href="{{ result.object.get_absolute_url }}">{{ result.object.title }}</a></p>
@@ -25,16 +23,30 @@
     {% endfor %}
 
     {% if page.has_previous or page.has_next %}
-    <div>
-      {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+    <footer>
+      {% if page.has_previous %}
+      <a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">
+      {% endif %}
+        &laquo; Previous
+      {% if page.has_previous %}
+      </a>
+      {% endif %}
+
       |
-      {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
-    </div>
+
+      {% if page.has_next %}
+      <a href="?q={{ query }}&amp;page={{ page.next_page_number }}">
+      {% endif %}
+        Next &raquo;
+      {% if page.has_next %}
+      </a>
+      {% endif %}
+    </footer>
     {% endif %}
+  </section>
 
   {% else %}
   {# Show some example queries to run, maybe query syntax, something else? #}
   {% endif %}
-  </form>
 </article>
 {% endblock %}
